log.txt
include/common_event.h:866:18: error: field has incomplete type 'struct timex'
    struct timex buf;
                 ^
include/common_event.h:866:12: note: forward declaration of 'struct timex'
    struct timex buf;
           ^
include/common_event.h:894:30: error: field has incomplete type 'struct __user_cap_header'
    struct __user_cap_header hdrp;
                             ^
include/common_event.h:894:12: note: forward declaration of 'struct __user_cap_header'
    struct __user_cap_header hdrp;
           ^
include/common_event.h:895:28: error: field has incomplete type 'struct __user_cap_data'
    struct __user_cap_data datap;
                           ^
include/common_event.h:895:12: note: forward declaration of 'struct __user_cap_data'
    struct __user_cap_data datap;
           ^
include/common_event.h:900:30: error: field has incomplete type 'struct __user_cap_header'
    struct __user_cap_header hdrp;
                             ^
include/common_event.h:894:12: note: forward declaration of 'struct __user_cap_header'
    struct __user_cap_header hdrp;
           ^
include/common_event.h:935:18: error: field has incomplete type 'struct timex'
    struct timex buf;
                 ^
include/common_event.h:866:12: note: forward declaration of 'struct timex'
    struct timex buf;
           ^
include/common_event.h:941:21: error: field has incomplete type 'struct timespec'
    struct timespec res;
                    ^
include/common_event.h:941:12: note: forward declaration of 'struct timespec'
    struct timespec res;
           ^
include/common_event.h:947:21: error: field has incomplete type 'struct timespec'
    struct timespec tp;
                    ^
include/common_event.h:941:12: note: forward declaration of 'struct timespec'
    struct timespec res;
           ^
include/common_event.h:954:27: error: field has incomplete type 'const struct timespec'
    const struct timespec request;
                          ^
include/common_event.h:941:12: note: forward declaration of 'struct timespec'
    struct timespec res;
           ^
include/common_event.h:955:21: error: field has incomplete type 'struct timespec'
    struct timespec remain;
                    ^
include/common_event.h:941:12: note: forward declaration of 'struct timespec'
    struct timespec res;
           ^
include/common_event.h:961:27: error: field has incomplete type 'const struct timespec'
    const struct timespec tp;
                          ^
include/common_event.h:941:12: note: forward declaration of 'struct timespec'
    struct timespec res;
           ^
include/common_event.h:966:15: error: expected ')'
    __s32 (*fn;
              ^
include/common_event.h:966:11: note: to match this '('
    __s32 (*fn;
          ^
include/common_event.h:1197:10: error: expected member name or ';' after declaration specifiers
    char [MAX_STR_LEN];
    ~~~~ ^
include/common_event.h:1326:27: error: field has incomplete type 'const struct timespec'
    const struct timespec timeout;
                          ^
include/common_event.h:941:12: note: forward declaration of 'struct timespec'
    struct timespec res;
           ^
include/common_event.h:1335:26: error: field has incomplete type 'const struct timeval'
    const struct timeval times2;
                         ^
include/common_event.h:1335:18: note: forward declaration of 'struct timeval'
    const struct timeval times2;
                 ^
include/common_event.h:1430:22: error: field has incomplete type 'struct itimerval'
    struct itimerval curr_value;
                     ^
include/common_event.h:1430:12: note: forward declaration of 'struct itimerval'
    struct itimerval curr_value;
           ^
include/common_event.h:1463:5: error: unknown type name 'id_t'
    id_t who;
    ^
include/common_event.h:1537:20: error: field has incomplete type 'struct timeval'
    struct timeval tv;
                   ^
include/common_event.h:1335:18: note: forward declaration of 'struct timeval'
    const struct timeval times2;
                 ^
include/common_event.h:1607:21: error: field has incomplete type 'struct timespec'
    struct timespec timeout;
                    ^
include/common_event.h:941:12: note: forward declaration of 'struct timespec'
    struct timespec res;
           ^
include/common_event.h:1647:6: error: type name requires a specifier or qualifier
     ...;
     ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
